MAJ-41 - Removed the onboarding addon refrence.

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B-bPhCct.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B3Hh2PcU.js"></script>
   </head>
 
   <body>
