MAJ-56 - Added new story for button group.

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DyRHsFIn.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-BtuWMW9H.js"></script>
   </head>
 
   <body>
