--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B1S1pH-g.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DTaKTYtw.js"></script>
   </head>
 
   <body>
