--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B6CW_sCQ.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DUxn29w4.js"></script>
   </head>
 
   <body>
