MAJ-148 - Added new component - MajSwitch.

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-DUxn29w4.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-D58oidrD.js"></script>
   </head>
 
   <body>
