MAJ-133 - Add maj-rating component to storybook.

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-B1HAh3YL.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CZk6bySg.js"></script>
   </head>
 
   <body>
