MAJ-134 - Added maj-slider component to storybook.

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CZk6bySg.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-xLc4ayvF.js"></script>
   </head>
 
   <body>
