MAJ-166 - New component added - Date Time Picker.

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-ZHNrkRwi.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Ccur8W9F.js"></script>
   </head>
 
   <body>
