--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -509,7 +509,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Ccur8W9F.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Nh6_yZ3Q.js"></script>
   </head>
 
   <body>
