--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -508,8 +508,11 @@
     console.warn('unable to connect to top frame for connecting dev tools');
   }
 </script>
-
-    <script type="module" crossorigin src="./assets/iframe-o8PPfr5D.js"></script>
+<link rel="preload" href="https://fonts.googleapis.com">
+<link rel="preload" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./styles.css" />
+    <script type="module" crossorigin src="./assets/iframe-CcHHP_k6.js"></script>
   </head>
 
   <body>
