--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -512,7 +512,7 @@
 <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./styles.css" />
-    <script type="module" crossorigin src="./assets/iframe-gtG5IHdF.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DQhQPTax.js"></script>
   </head>
 
   <body>
