MAJ-438 - Storybook build.

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -511,7 +511,7 @@
 <link rel="preload" href="https://fonts.googleapis.com">
 <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="./assets/iframe-Cg9C6Jpg.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-p0M8tHyt.js"></script>
   </head>
 
   <body>
