--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -511,7 +511,7 @@
 <link rel="preload" href="https://fonts.googleapis.com">
 <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="./assets/iframe-DXTMxf5w.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Mbq9VQ6I.js"></script>
   </head>
 
   <body>
